kubernetes-12/2.3/src/nginx-app.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
